--- a/divisi.html
+++ b/divisi.html
@@ -25,7 +25,7 @@
   <body>
     <header class="container">
       <div id="nav-left">
-        <a href="home.html"
+        <a href="index.html"
           ><img class="logo" src="assets/Logo Himatif.png" alt=""
         /></a>
         <!-- Mobile Hamburger -->
@@ -38,7 +38,7 @@
       </div>
       <nav class="nav-list" id="nav-list">
         <ul>
-          <li><a href="home.html" class="">Beranda</a></li>
+          <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="active">Divisi</a></li>
         </ul>
       </nav>
@@ -104,7 +104,7 @@
     <div id="pemda">
       <section class="divisi container" id="divisi-pemda">
         <div class="divisi-left">
-          <img src="assets/Divisi Humas 2023.png" alt="Divisi Pemda 2022" />
+          <img src="assets/Divisi Humas 2023.png" alt="Divisi Pemda 2023" />
           <p>Divisi Hubungan Masyarakat 2023</p>
         </div>
         <div class="divisi-right">
