--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="kontak.css" />
     <link rel="icon" type="image/x-icon" href="assets/Logo Himatif.png" />
     <link
       rel="stylesheet"
@@ -97,9 +96,9 @@
               <p class="name">Zidane Baihaqi</p>
               <a
                 class="instagram"
-                href="https://www.instagram.com/zbaihaqi/"
+                href="https://www.instagram.com/zbaihaqi_/"
                 target="_blank"
-                ><img src="assets/ic_insta.svg" alt="" />zbaihaqi</a
+                ><img src="assets/ic_insta.svg" alt="" />zbaihaqi_</a
               >
             </div>
           </div>
@@ -317,7 +316,7 @@
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/all-himatif.jpg" alt="" />
+            <img src="assets/Divisi Humas 2023.png" alt="" />
             <h3>Divisi<br />Hubungan Masyarakat</h3>
           </div>
           <div
@@ -331,158 +330,23 @@
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/Divisi Humas 2023.png" alt="" />
+            <img src="assets/all-himatif.jpg" alt="" />
             <h3>Divisi<br />Media Informasi</h3>
           </div>
         </div>
       </div>
       <div class="org-structure-item">
-        <div class="title">Badan Pengawas Organisasi</div>
+        <div class="title">BPO</div>
         <div class="org-structure-wrapper">
           <div
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
             <img src="assets/all-himatif.jpg" alt="" />
-            <h3>Badan Pengawas Organisasi</h3>
+            <h3>Badan Pengawas Organisasi<br>HIMATIF</h3>
           </div>
       </div>
     </section>
-    <!-- Contact Section-->
-    <section class="page-section bg-customs text-light" id="kontak">
-      <div class="container">
-        <!-- Contact Section Heading-->
-        <h2
-          class="text-center text-uppercase text-light mb-0">
-          Kontak Kami
-        </h2>
-        <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
-          <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-          <div class="divider-custom-line"></div>
-        </div>
-        <!-- Contact Section Form-->
-        <div class="row text-light">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-              <div class="control-group">
-                <div
-                  class="form-group floating-label-form-group controls mb-0 pb-2"
-                >
-                  <label>Nama</label>
-                  <input
-                    class="form-control"
-                    id="name_sender"
-                    type="text"
-                    placeholder="Nama"
-                    required="required"
-                    data-validation-required-message="Please enter your name."
-                  />
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div
-                  class="form-group floating-label-form-group controls mb-0 pb-2"
-                >
-                  <label>Instansi</label>
-                  <input
-                    class="form-control"
-                    id="instansi_sender"
-                    type="text"
-                    placeholder="Instansi"
-                    required="required"
-                    data-validation-required-message="Please enter your email address."
-                  />
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div
-                  class="form-group floating-label-form-group controls mb-0 pb-2"
-                >
-                  <label>Pesan</label>
-                  <textarea
-                    class="form-control"
-                    id="message_sender"
-                    rows="5"
-                    placeholder="Pesan"
-                    required="required"
-                    data-validation-required-message="Please enter a message."
-                  ></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br />
-              <div id="success"></div>
-              <div class="form-group">
-                <a
-                  class="btn btn-primary btn-xl"
-                  id="btn_send"
-                  role="button"
-                  href="https://api.whatsapp.com/send?phone=6289501704484&text="
-                  >Send</a
-                >
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Footer-->
-    <footer class="footer text-center py-4">
-      <div class="container">
-        <div class="row">
-          <!-- Footer Location-->
-          <div class="col-lg-12 mb-5 mb-lg-5">
-            <h4 class="text-uppercase mb-4">Universitas Tangerang Raya</h4>
-            <p class="lead mb-0">
-              Komp. Perum. Sudirman Indah
-              <br />
-              Jl. Ki Mas Laeng No 25 Katomas Tigaraksa Kab. Tangerang
-            </p>
-          </div>
-          <div class="col-lg-12 mb-5 mb-lg-5">
-            <a
-              class="btn btn-outline-light btn-social mx-1"
-              href="https://instagram.com/himatif.untara?igshid=MzRlODBiNWFlZA=="
-              ><i class="fab fa-fw fa-instagram"></i
-            ></a>
-            <a
-              class="btn btn-outline-light btn-social mx-1"
-              href="https://youtube.com/@himatif.untara_channel297?si=XF5nKcUvQgeg-a62"
-              ><i class="fab fa-fw fa-youtube"></i
-            ></a>
-            <a
-              class="btn btn-outline-light btn-social mx-1"
-              href="mailto:untarahimatif@gmail.com"
-              ><i class="far fa-envelope-open"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- Copyright Section-->
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small>Copyright &copy; HIMATIF UNTARA 2023</small>
-      </div>
-    </div>
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
-    <div class="scroll-to-top d-lg-none position-fixed">
-      <a
-        class="js-scroll-trigger d-block text-center text-white rounded"
-        href="#page-top"
-        ><i class="fa fa-chevron-up"></i
-      ></a>
-    </div>
-    <script
-      src="wa_autotext.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
     <!-- SPLIDE -->
     <script src="script.js"></script>
   </body>
