--- a/divisi.html
+++ b/divisi.html
@@ -190,35 +190,40 @@
         </h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Hendra.png" alt="" />
             <h3>Hendra Kurniawan</h3>
             <p>Ketua<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Misbahudin.png" alt="" />
             <h3>Misbahudin</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Agung P.png" alt="" />
             <h3>M. Agung Permana</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Fajar.png" alt="" />
             <h3>Fajar Pratama</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Harry.png" alt="" />
             <h3>Harry Septoni Nadapdap</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
             <img src="assets/iky.jpg" alt="" />
             <h3>Isatirrodiah Safitri A.</h3>
+            <p>Anggota<br />(Divisi HUMAS)</p>
+          </div>
+          <div class="structure-card">
+            <img src="assets/Herlina.png" alt="" />
+            <h3>Herlina Mulyasari</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
         </div>
@@ -229,7 +234,7 @@
     <div class="hide" id="advo">
       <section class="divisi container" id="divisi-advo">
         <div class="divisi-left">
-          <img src="assets/all-himatif.jpg" alt="Divisi Advokasi 2022" />
+          <img src="assets/1.) Divisi Litbang 2023.png" alt="Divisi Advokasi 2022" />
           <p>Divisi Penelitian Dan Pengembangan 2023</p>
         </div>
         <div class="divisi-right">
@@ -315,7 +320,7 @@
         </h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Mass Ayyub.png" alt="" />
             <h3>Mas Ayyub Al Fajar</h3>
             <p>Ketua<br />(Divisi LITBANG)</p>
           </div>
@@ -325,24 +330,24 @@
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Nanda.png" alt="" />
             <h3>Ananda Nur Syaputra</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Herian Diki.png" alt="" />
             <h3>Herian Diki</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/M Ariq.png" alt="" />
             <h3>Muhamad Ariq Zaidan</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Farhan.png" alt="" />
             <h3>Muhamad Farhan</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
@@ -437,12 +442,12 @@
         <h2>Anggota Divisi <span class="br">Media Informasi</span>HIMATIF 2023</h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Tedy.png" alt="" />
             <h3>Tedy Santiaji Praja</h3>
             <p>Ketua<br />(Divisi MEDIF)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Grace.png" alt="" />
             <h3>Graciela Christy Nunuela</h3>
             <p>Anggota<br />(Divisi Medif)</p>
           </div>
@@ -454,17 +459,17 @@
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Cahyarani.png" alt="" />
             <h3>Cahyarani Permatasari</h3>
             <p>Anggota<br />(Divisi MEDIF)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Ari.png" alt="" />
             <h3>Rahman Albari</h3>
             <p>Anggota<br />(Divisi MEDIF)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Firman.png" alt="" />
             <h3>Firmansyah Hidayat</h3>
             <p>Anggota<br />(Divisi MEDIF)</p>
           </div>
