--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Website resmi Himpunan Mahasiswa Teknologi Informasi periode kepengurusan 2023/2024"
+    />
+    <meta
+      name="author"
+      content="Developper HIMATIF Universitas Tangerang Raya"
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="assets/Logo Himatif.png" />
     <link
@@ -17,7 +25,7 @@
   <body>
     <header class="container">
       <div id="nav-left">
-        <a href="home.html"
+        <a href="index.html"
           ><img class="logo" src="assets/Logo Himatif.png" alt=""
         /></a>
         <!-- Mobile Hamburger -->
@@ -90,7 +98,7 @@
             <div class="periode">2023-2024</div>
             <div
               class="image"
-              style="background-image: url('assets/iky.jpg')"
+              style="background-image: url('assets/Zidane\ Baihaqi.png')"
             ></div>
             <div class="info">
               <p class="name">Zidane Baihaqi</p>
@@ -106,15 +114,15 @@
             <div class="periode">2022-2023</div>
             <div
               class="image gallery-image-2"
-              style="background-image: url('assets/iky.jpg')"
+              style="background-image: url('assets/Hombing.png')"
             ></div>
             <div class="info">
-              <p class="name">Muhamad Rizki Daelami</p>
+              <p class="name">Tubu Ni Boru Siagian</p>
               <a
                 class="instagram"
-                href="https://www.instagram.com/iky4star/"
+                href="https://www.instagram.com/bung.hombing63_/"
                 target="_blank"
-                ><img src="assets/ic_insta.svg" alt="" />iky4star</a
+                ><img src="assets/ic_insta.svg" alt="" />bung.hombing63_</a
               >
             </div>
           </div>
@@ -163,10 +171,10 @@
         <div class="documentation-card hide-mobile-only">
           <div
             class="documentation-image"
-            style="background-image: url('assets/image_dummy.png')"
+            style="background-image: url('assets/Workshop\ HTML\ &\ CSS\ Dasar\ \(11\ September\ 2022\).jpg')"
           ></div>
           <div class="about-activity">
-            <div class="activity">Nama Kegiatan 2</div>
+            <div class="activity">WORKSHOP HTML DAN CSS G-1</div>
             <div class="desc">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
               dolorum distinctio! Unde
@@ -176,10 +184,10 @@
         <div class="documentation-card hide">
           <div
             class="documentation-image"
-            style="background-image: url('assets/image_dummy.png')"
+            style="background-image: url('assets/Workshop\ HTML\ &\ CSS\ Dasar\ \(18\ September\ 2022\).jpg')"
           ></div>
           <div class="about-activity">
-            <div class="activity">Nama Kegiatan 3</div>
+            <div class="activity">WORKSHOP HTML DAN CSS G-2</div>
             <div class="desc">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
               dolorum distinctio! Unde
@@ -276,19 +284,19 @@
         <div class="title">Pengurus Inti</div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Zidane Baihaqi.png" alt="" />
             <h3>Zidane Baihaqi</h3>
             <p>Ketua Umum</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Vier.png" alt="" />
             <h3>Ramadhan Alfi Vieri</h3>
             <p>Wakil Ketua Umum</p>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Dany A.png" alt="" />
             <h3>Dany Kurniawan</h3>
             <p>Sekretaris 1</p>
           </div>
@@ -298,12 +306,12 @@
             <p>Sekretaris 2</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Febi A.png" alt="" />
             <h3>Febi Anjelina Permatasari</h3>
             <p>Bendahara 1</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Putri Ayu.png" alt="" />
             <h3>Putri Ayu Septina</h3>
             <p>Bendahara 2</p>
           </div>
@@ -323,7 +331,7 @@
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/all-himatif.jpg" alt="" />
+            <img src="assets/1.) Divisi Litbang 2023.png" alt="" />
             <h3>Divisi<br />Penelitian Dan Pengembangan</h3>
           </div>
           <div
