--- a/index.html
+++ b/index.html
@@ -344,14 +344,17 @@
         </div>
       </div>
       <div class="org-structure-item">
-        <div class="title">BPO</div>
+        <div class="title">Badan Pengawas HIMATIF</div>
         <div class="org-structure-wrapper">
           <div
-            class="structure-card structure-card-division"
-            onclick="location='divisi.html#divisi-pemda'"
-          >
-            <img src="assets/all-himatif.jpg" alt="" />
-            <h3>Badan Pengawas Organisasi<br>HIMATIF</h3>
+            class="structure-card structure-card-co">
+            <img src="assets/iky.jpg" alt="" />
+            <h3>Muhamad Yunus Mubarok</h3>
+          </div>
+          <div
+            class="structure-card structure-card-co">
+            <img src="assets/iky.jpg" alt="" />
+            <h3>Martin Setya Endra W.</h3>
           </div>
       </div>
     </section>
@@ -372,6 +375,7 @@
         </div>
         <div class="footer_copyright">Copyright © HIMATIF UNTARA 2023</div>
       </footer>
+          <a href="mailto:himatifuntara@gmail.com?subject=Masukan%20Karya%20Mahasiswa&body=Nama%20Karya:%0ADeskripsi%20Karya:%0ANama%20Anda:%0AAngkatan%20Anda:%0A%0A%0ASilahkan%20unggah%20untuk%20contoh%20gambar" class="tampilkan">Tampilkan Karyamu</a>
     <!-- SPLIDE -->
     <script src="script.js"></script>
   </body>
