--- a/divisi.html
+++ b/divisi.html
@@ -213,7 +213,7 @@
           </div>
           <div class="structure-card">
             <img src="assets/Harry.png" alt="" />
-            <h3>Harry Septoni Nadapdap</h3>
+            <h3>Harry Septoni Armando Nadapdap</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
@@ -452,7 +452,7 @@
             <p>Anggota<br />(Divisi Medif)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/Rahma.png" alt="" />
             <h3>Aulia Rahma Dewy</h3>
             <p>Anggota<br />(Divisi MEDIF)</p>
           </div>
@@ -508,7 +508,7 @@
           </div>
           <div class="structure-card">
             <img src="assets/iky.jpg" alt="" />
-            <h3>Martin Setya<br>Endra W.</h3>
+            <h3>Martin Setya Endra W.</h3>
           </div>
       </section>
     </div>
