--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Website resmi Himpunan Mahasiswa Teknologi Informasi periode kepengurusan 2023/2024"
+      content="Website Resmi Himpunan Mahasiswa Teknologi Informasi periode kepengurusan 2023/2024"
     />
     <meta
       name="author"
@@ -338,7 +338,7 @@
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/all-himatif.jpg" alt="" />
+            <img src="assets/3.) Divisi Medif 2023.jpg" alt="" />
             <h3>Divisi<br />Media Informasi</h3>
           </div>
         </div>
