--- a/divisi.html
+++ b/divisi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Website resmi Himpunan Mahasiswa Teknologi Informasi periode kepengurusan 2023/2024"
+      content="Website Resmi Himpunan Mahasiswa Teknologi Informasi periode kepengurusan 2023/2024"
     />
     <meta
       name="author"
@@ -359,7 +359,7 @@
     <div class="hide" id="organ">
       <section class="divisi container" id="divisi-organ">
         <div class="divisi-left">
-          <img src="assets/all-himatif.jpg" alt="Divisi Organisasi 2022" />
+          <img src="assets/3.) Divisi Medif 2023.jpg" alt="Divisi Organisasi 2022" />
           <p>Divisi Media Informasi 2023</p>
         </div>
         <div class="divisi-right">
