--- a/divisi.html
+++ b/divisi.html
@@ -40,6 +40,9 @@
         <ul>
           <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="active">Divisi</a></li>
+          <li><a href="civitas.html" class="">Civitas</a></li>
+          <li><a href="karya.html" class="">Karya Mahasiswa</a></li>
+          <li><a href="bengkel.html" class="">Bengkel IT</a></li>
         </ul>
       </nav>
     </header>
@@ -529,6 +532,7 @@
         </div>
         <div class="footer_copyright">Copyright © HIMATIF UNTARA 2023</div>
       </footer>
+    <!-- SPLIDE -->
     <script src="script.js"></script>
   </body>
 </html>
