--- a/karya.html
+++ b/karya.html
@@ -71,7 +71,6 @@
       </div>
     </div>
     <!-- Karya -->
-    <h1>Karya Mahasiswa</h1>
     <div class="container">
         <div class="gallery">
 
@@ -142,7 +141,7 @@
     </div>
     <!-- survei -->
     <form class="survey-form">
-        <h2>Survey Form</h2>
+        <h2 class="h2form" text="center">Survey Form</h2>
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
