--- a/bengkel.html
+++ b/bengkel.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="">Divisi</a></li>
-          <li><a href="civitas.html" class="">Civitas</a></li>
+          <li><a href="civitas.html" class="">Civitas Akademik</a></li>
           <li><a href="karya.html" class="">Karya Mahasiswa</a></li>
           <li><a href="bengkel.html" class="active">Bengkel IT</a></li>
         </ul>
@@ -49,15 +49,8 @@
     <section class="hero-section container">
       <div class="hero-left">
         <h1>
-          Bengkel IT<span class="br">Teknologi Informasi</span>
+          Bengkel IT<span class="br">HIMATIF</span>
         </h1>
-        <div class="tagline">
-          <span>‘‘</span>
-          <p>
-            T.Informasi Beda! T.Informasi Satu! <br />
-            <span>T.Informasi Beda tapi Satu!</span>
-          </p>
-        </div>
       </div>
       <div class="hero-right">
         <img src="assets/Logo Himatif_2.png" alt="" />
