--- a/civitas.html
+++ b/civitas.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="">Divisi</a></li>
-          <li><a href="civitas.html" class="active">Civitas</a></li>
+          <li><a href="civitas.html" class="active">Civitas Akademik</a></li>
           <li><a href="karya.html" class="">Karya Mahasiswa</a></li>
           <li><a href="bengkel.html" class="">Bengkel IT</a></li>
         </ul>
@@ -51,13 +51,6 @@
         <h1>
           Civitas Akademik<span class="br">Fakultas Teknik</span>
         </h1>
-        <div class="tagline">
-          <span>‘‘</span>
-          <p>
-            T.Informasi Beda! T.Informasi Satu! <br />
-            <span>T.Informasi Beda tapi Satu!</span>
-          </p>
-        </div>
       </div>
       <div class="hero-right">
         <img src="assets/Logo Himatif_2.png" alt="" />
