--- a/divisi.html
+++ b/divisi.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="active">Divisi</a></li>
-          <li><a href="civitas.html" class="">Civitas</a></li>
+          <li><a href="civitas.html" class="">Civitas Akademik</a></li>
           <li><a href="karya.html" class="">Karya Mahasiswa</a></li>
           <li><a href="bengkel.html" class="">Bengkel IT</a></li>
         </ul>
@@ -49,16 +49,6 @@
     <section class="hero-section container">
       <div class="hero-left">
         <h1>Divisi HIMATIF</h1>
-        <div class="tagline">
-          <span>‘‘</span>
-          <p>
-            T.Informasi Beda! T.Informasi Satu! <br />
-            <span>T.Informasi Beda tapi Satu!</span>
-          </p>
-        </div>
-        <!-- <button class="button cta-button" onclick="location='#divisi'">
-        <span>Lihat Divisi</span>
-      </button> -->
       </div>
       <div class="hero-right">
         <img src="assets/Logo Himatif_2.png" alt="" />
