--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="divisi.html" class="">Divisi</a></li>
-          <li><a href="civitas.html" class="">Civitas</a></li>
+          <li><a href="civitas.html" class="">Civitas Akademik</a></li>
           <li><a href="karya.html" class="">Karya Mahasiswa</a></li>
           <li><a href="bengkel.html" class="">Bengkel IT</a></li>
         </ul>
@@ -49,8 +49,7 @@
     <section class="hero-section container">
       <div class="hero-left">
         <h1>
-          Himpunan <span class="br">Mahasiswa</span
-          ><span class="br">Teknologi Informasi</span>
+          Himpunan Mahasiswa<span class="br">Teknologi Informasi</span>
         </h1>
         <div class="tagline">
           <span>‘‘</span>
