--- a/karya.html
+++ b/karya.html
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="index.html" class="">Beranda</a></li>
           <li><a href="divisi.html" class="">Divisi</a></li>
-          <li><a href="civitas.html" class="">Civitas</a></li>
+          <li><a href="civitas.html" class="">Civitas Akademik</a></li>
           <li><a href="karya.html" class="active">Karya Mahasiswa</a></li>
           <li><a href="bengkel.html" class="">Bengkel IT</a></li>
         </ul>
@@ -50,15 +50,8 @@
     <section class="hero-section container">
       <div class="hero-left">
         <h1>
-          Karya Mahasiswa<span class="br">Teknologi Informasi</span>
+          Karya Mahasiswa<span class="br">HIMATIF</span>
         </h1>
-        <div class="tagline">
-          <span>‘‘</span>
-          <p>
-            T.Informasi Beda! T.Informasi Satu! <br />
-            <span>T.Informasi Beda tapi Satu!</span>
-          </p>
-        </div>
       </div>
       <div class="hero-right">
         <img src="assets/Logo Himatif_2.png" alt="" />
@@ -141,7 +134,7 @@
     </div>
     <!-- survei -->
     <form class="survey-form">
-        <h2 class="h2form" text="center">Survey Form</h2>
+        <h2 class="iky" text="center">Survey Form</h2>
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
