--- a/karya.html
+++ b/karya.html
@@ -134,7 +134,7 @@
     </div>
     <!-- survei -->
     <form class="survey-form">
-        <h2 class="iky" text="center">Survey Form</h2>
+        <h2 class="iky" text="center">Tampilkan Karya</h2>
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
@@ -146,10 +146,6 @@
         <div class="form-group">
           <label for="message">Message:</label>
           <textarea id="message" name="message" rows="4" required></textarea>
-        </div>
-        <div class="form-group">
-          <label for="rating">Rating:</label>
-          <input type="range" id="rating" name="rating" min="1" max="5" step="1" required>
         </div>
         <button type="submit">Submit</button>
       </form>
