--- a/karya.html
+++ b/karya.html
@@ -13,6 +13,8 @@
       content="Developper HIMATIF Universitas Tangerang Raya"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="karya.css" />
+    <script src="karya.js" defer></script>
     <link rel="stylesheet" href="lightbox2/lightbox.css">
     <link rel="icon" type="image/x-icon" href="assets/Logo Himatif.png" />
     <link
@@ -67,68 +69,43 @@
     <div class="container">
         <div class="gallery">
 
-            <a href="./images/1.jpg" data-lightbox="Models">
-                <img src="./images/1.jpg">
-            </a>
+            <section class="creativity">
 
-            <a href="./images/2.jpg" data-lightbox="Models">
-                <img src="./images/2.jpg">
-            </a>
+<div class="card">
+    <!-- Ukuran gambar 854x480 -->
+    <img class="picture" src="karya/01.jpeg">
+    <h3 class="creativity_name">
+        <a target="_blank" href="https://instagram.com/himatif.untara">
+            Kita adalah bukti dari Indonesia Maju
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="15" width="15" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>
+        </a>
+    </h3>
+    <p class="creativity_creator">
+        Divisi MEDIF HIMATIF
+    </p>
+    <p class="creativity_description">
+        Membuktikan kemajuan Indonesia dari infrakstruktur pembangunan, kemajuan pendidikan dan keindahan alam yang berada di Indonesia.
+    </p>
+</div>
 
-            <a href="./images/3.jpg" data-lightbox="Models">
-                <img src="./images/3.jpg">
+<div class="card">
+  <!-- Ukuran gambar 854x480 -->
+  <img class="picture" src="karya/01.jpeg">
+  <h3 class="creativity_name">
+      <a target="_blank" href="https://instagram.com/himatif.untara">
+          Kita adalah bukti dari Indonesia Maju
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="15" width="15" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>
+      </a>
+  </h3>
+  <p class="creativity_creator">
+      Divisi MEDIF HIMATIF
+  </p>
+  <p class="creativity_description">
+      Membuktikan kemajuan Indonesia dari infrakstruktur pembangunan, kemajuan pendidikan dan keindahan alam yang berada di Indonesia.
+  </p>
+</div>
 
-            <a href="./images/4.jpg" data-lightbox="Models">
-                <img src="./images/4.jpg">
-            </a>
-
-            <a href="./images/5.jpg" data-lightbox="Models">
-                <img src="./images/5.jpg">
-            </a>
-
-            <a href="./images/6.jpg" data-lightbox="Models">
-                <img src="./images/6.jpg">
-            </a>
-
-            <a href="./images/7.jpg" data-lightbox="Models">
-                <img src="./images/7.jpg">
-            </a>
-
-            <a href="./images/8.jpg" data-lightbox="Models">
-                <img src="./images/8.jpg">
-            </a>
-            
-            <a href="./images/9.jpg" data-lightbox="Models">
-                <img src="./images/9.jpg">
-            </a>
-
-            <a href="./images/10.jpg" data-lightbox="Models">
-                <img src="./images/10.jpg">
-            </a>
-
-            <a href="./images/11.jpg" data-lightbox="Models">
-                <img src="./images/11.jpg">
-            </a>
-
-            <a href="./images/12.jpg" data-lightbox="Models"ma>
-                <img src="./images/12.jpg">
-            </a>
-
-            <a href="./images/13.jpg" data-lightbox="Models"ma>
-                <img src="./images/13.jpg">
-            </a>
-
-            <a href="./images/14.jpg" data-lightbox="Models"ma>
-                <img src="./images/14.jpg">
-            </a>
-
-            <a href="./images/15.jpg" data-lightbox="Models"ma>
-                <img src="./images/15.jpg">
-            </a>
-
-            <a href="./images/16.jpg" data-lightbox="Models"ma>
-                <img src="./images/16.jpg">
-            </a>
+</section>
 
         </div>
     </div>
@@ -136,18 +113,22 @@
     <form class="survey-form">
         <h2 class="iky" text="center">Tampilkan Karya</h2>
         <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <label for="nama_pembuat">Nama Pembuat:</label>
+          <input type="text" id="nama_pembuat" name="nama_pembuat" required>
         </div>
         <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <label for="nama_karya">Nama Karya:</label>
+          <input type="text" id="nama_karya" name="nama_karya" required>
         </div>
         <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
+          <label for="link_karya">Link Karya:</label>
+          <input type="text" id="link_karya" name="link_karya" required>
         </div>
-        <button type="submit">Submit</button>
+        <div class="form-group">
+          <label for="deskripsi_karya">Deskripsi Karya:</label>
+          <textarea id="deskripsi_karya" name="deskripsi_karya" rows="4" required></textarea>
+        </div>
+        <button type="submit" onclick="send()">Submit</button>
       </form>
     <!-- Footer-->
     <footer class="footer">
