--- a/divisi.html
+++ b/divisi.html
@@ -126,11 +126,6 @@
               </p>
             </div>
           </div>
-          <div class="program-item right">
-            <div class="program-card">1. Algoritma & Pemrograman</div>
-            <div class="program-card">2. Pemrograman Web Dasar</div>
-            <div class="program-card">3. Pengolahan Citra Digital</div>
-          </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
@@ -144,26 +139,10 @@
               </p>
             </div>
           </div>
-          <div class="program-item right">
-            <div class="program-card">1. Desain</div>
-            <div class="program-card">2. E-Talk</div>
-            <div class="program-card">3. Software Development</div>
-          </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
             <div class="program-title">3. Sosialisasi</div>
-            <div class="program-desc">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
-              </p>
-            </div>
-          </div>
-          <div class="program-item right">
-            <div class="program-title">4. Kelompok Belajar</div>
             <div class="program-desc">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -234,10 +213,7 @@
           <div class="divisi-item what-is-hmif">
             <h2>Tugas Divisi Penelitian Dan Pengembangan</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              suscipit esse, eos sequi dolor aliquid similique mollitia
-              repudiandae atque aliquam ratione animi dolorem eum id commodi
-              dolorum eius provident tempora.
+              Salah satu divisi didalam himpunan teknologi informasi Universitas Tangerang Raya yang bertujuan untuk membuat acara workshop/seminar, membuat website himatif untara dan kelas belajar.
             </p>
           </div>
         </div>
@@ -246,60 +222,30 @@
         <h2>Program Kerja</h2>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">1. ?????</div>
+            <div class="program-title">1. Mengadakan Workshop/Seminar</div>
             <div class="program-desc">
               <p>
-                Lorem dolor sit amet consectetur adipisicing elit. Officia esse
-                possimus pariatur totam dolore sapiente illo laborum aliquam ab
-                explicabo quos, eum placeat velit doloribus. Tenetur nulla unde
-                maxime non.
+                (Mengadakan sebuah acara besar(formal) untuk berfokus meningkatkan pengetahuan atau praktik dari mahasiswa Teknologi Informasi)
               </p>
             </div>
-          </div>
-          <div class="program-item right">
-            <div class="program-card">1. ??????</div>
-            <div class="program-card">2. ?????</div>
-            <div class="program-card">3. ?????????</div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">2. ???????</div>
+            <div class="program-title">2. Membuat Website HIMATIF UNTARA</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                (Membuat sebuah website untuk himpunan mahasiswa teknologi informasi dan melakukan perawatan untuk dijadikan sebagai salah satu tempat informasi Himpunan dan juga sebagai tanda pengenal himpunan)
               </p>
             </div>
-          </div>
-          <div class="program-item right">
-            <div class="program-card">1. ????</div>
-            <div class="program-card">2. ???????</div>
-            <div class="program-card">3. ???????</div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. ?????</div>
+            <div class="program-title">3. Mengadakan kelas belajar</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
-              </p>
-            </div>
-          </div>
-          <div class="program-item right">
-            <div class="program-title">4. ????????</div>
-            <div class="program-desc">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                (Acara kecil(tidak formal) yang diadakan beberapa orang yang berfokus pada satu materi untuk saling bertukar informasi dari mahasiswa ke mahasiswa)
               </p>
             </div>
           </div>
@@ -339,11 +285,6 @@
             <h3>Muhamad Ariq Zaidan</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
-          <div class="structure-card">
-            <img src="assets/Farhan.png" alt="" />
-            <h3>Muhamad Farhan</h3>
-            <p>Anggota<br />(Anggota LITBANG)</p>
-          </div>
         </div>
       </section>
     </div>
@@ -381,11 +322,6 @@
               </p>
             </div>
           </div>
-          <div class="program-item right">
-            <div class="program-card">1. ??????</div>
-            <div class="program-card">2. ?????</div>
-            <div class="program-card">3. ?????????</div>
-          </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
@@ -399,26 +335,10 @@
               </p>
             </div>
           </div>
-          <div class="program-item right">
-            <div class="program-card">1. ????</div>
-            <div class="program-card">2. ???????</div>
-            <div class="program-card">3. ???????</div>
-          </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
             <div class="program-title">3. ?????</div>
-            <div class="program-desc">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
-              </p>
-            </div>
-          </div>
-          <div class="program-item right">
-            <div class="program-title">4. ????????</div>
             <div class="program-desc">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
