--- a/divisi.html
+++ b/divisi.html
@@ -102,7 +102,7 @@
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
-            <h2>Tugas Divisi Hubungan Masyarakat</h2>
+            <h2>Tugas Divisi HUMAS</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
               suscipit esse, eos sequi dolor aliquid similique mollitia
@@ -207,11 +207,11 @@
       <section class="divisi container" id="divisi-advo">
         <div class="divisi-left">
           <img src="assets/1.) Divisi Litbang 2023.png" alt="Divisi Advokasi 2022" />
-          <p>Divisi Penelitian Dan Pengembangan 2023</p>
+          <p>Divisi Penelitian Dan Pengenmbangan 2023</p>
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
-            <h2>Tugas Divisi Penelitian Dan Pengembangan</h2>
+            <h2>Tugas Divisi LITBANG</h2>
             <p>
               Salah satu divisi didalam himpunan teknologi informasi Universitas Tangerang Raya yang bertujuan untuk membuat acara workshop/seminar, membuat website himatif untara dan kelas belajar.
             </p>
@@ -225,7 +225,7 @@
             <div class="program-title">1. Mengadakan Workshop/Seminar</div>
             <div class="program-desc">
               <p>
-                (Mengadakan sebuah acara besar(formal) untuk berfokus meningkatkan pengetahuan atau praktik dari mahasiswa Teknologi Informasi)
+                Mengadakan sebuah acara besar(formal) untuk berfokus meningkatkan pengetahuan atau praktik dari mahasiswa Teknologi Informasi
               </p>
             </div>
           </div>
@@ -235,7 +235,7 @@
             <div class="program-title">2. Membuat Website HIMATIF UNTARA</div>
             <div class="program-desc">
               <p>
-                (Membuat sebuah website untuk himpunan mahasiswa teknologi informasi dan melakukan perawatan untuk dijadikan sebagai salah satu tempat informasi Himpunan dan juga sebagai tanda pengenal himpunan)
+                Membuat sebuah website untuk himpunan mahasiswa teknologi informasi dan melakukan perawatan untuk dijadikan sebagai salah satu tempat informasi Himpunan dan juga sebagai tanda pengenal himpunan
               </p>
             </div>
           </div>
@@ -245,7 +245,7 @@
             <div class="program-title">3. Mengadakan kelas belajar</div>
             <div class="program-desc">
               <p>
-                (Acara kecil(tidak formal) yang diadakan beberapa orang yang berfokus pada satu materi untuk saling bertukar informasi dari mahasiswa ke mahasiswa)
+                Acara kecil(tidak formal) yang diadakan beberapa orang yang berfokus pada satu materi untuk saling bertukar informasi dari mahasiswa ke mahasiswa
               </p>
             </div>
           </div>
@@ -298,7 +298,7 @@
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
-            <h2>Tugas Divisi Media Infromasi</h2>
+            <h2>Tugas Divisi MEDIF</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
               suscipit esse, eos sequi dolor aliquid similique mollitia
@@ -399,7 +399,7 @@
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
-            <h2>Tugas Badan Pengawas Organisasi</h2>
+            <h2>Tugas BPO</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
               suscipit esse, eos sequi dolor aliquid similique mollitia
