--- a/civitas.html
+++ b/civitas.html
@@ -77,61 +77,62 @@
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector wanita.jpg" alt="" />
             <h3>Luthfiah Ramdhanyah, S.T</h3>
             <p>Akademik F.Teknik</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector wanita.jpg" alt="" />
             <h3>Widya Selvi Tiara, S.Hum</h3>
             <p>Akademik F.Teknik</p>
           </div>
         </div>
+        </div>
+        <div class="org-structure-item">
+        <div class="title">Kepala Program Studi UNTARA</div>
         <div class="org-structure-wrapper">
-          <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+          <div class="structure-card structure-card-division">
+            <img src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
             <h3>Saryani, S.Kom.,M.TI</h3>
-            <p>Kaprodi Teknologi Informasi</p>
           </div>
         </div>
-      </div>
       <div class="org-structure-item">
-        <div class="title">Dosen Tetap Universitas Tangerang Raya</div>
+        <div class="title">Dosen Tetap UNTARA</div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
             <h3>Saryani, S.Kom.,M.TI</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/2.R Wahyudi.,ST.,M.Kom.png" alt="" />
             <h3>R. Wahyudi, S.T.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Bambang Libriantoro, S.Kom.,M.Kom</h3>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/5. Septa Febriyansyah.,S.M.,S.Kom.,M.Kom.png" alt="" />
             <h3>Septa Febriansyah, S.M.,S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/6. Fabio Junior.,S.Kom.,M.Kom.png" alt="" />
             <h3>Fabio Junior, S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Ferdinan Kusuma, S.Kom.,M.Kom</h3>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/8. Irawan.,S.Kom.,M.Kom.png" alt="" />
             <h3>Irawan, S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="civitas/3.Rika Nurhidayah.,S.Kom.,MM.png" alt="" />
             <h3>Rika Nurhidayah, S.Kom.,M.Kom</h3>
           </div>
         </div>
