--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <p>Sekretaris 1</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector wanita.jpg" alt="" />
             <h3>Syifa Khaerunisa</h3>
             <p>Sekretaris 2</p>
           </div>
@@ -352,12 +352,12 @@
           <div
             class="structure-card structure-card-co"onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div
             class="structure-card structure-card-co">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Martin Setya Endra W.</h3>
           </div>
       </div>
