--- a/divisi.html
+++ b/divisi.html
@@ -189,7 +189,7 @@
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector wanita.jpg" alt="" />
             <h3>Isatirrodiah Safitri A.</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
@@ -207,7 +207,7 @@
       <section class="divisi container" id="divisi-advo">
         <div class="divisi-left">
           <img src="assets/1.) Divisi Litbang 2023.png" alt="Divisi Advokasi 2022" />
-          <p>Divisi Penelitian Dan Pengenmbangan 2023</p>
+          <p>Divisi Penelitian Dan Pengembangan 2023</p>
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
@@ -264,7 +264,7 @@
             <p>Ketua<br />(Divisi LITBANG)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Muhamad Rizki Daelami</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
@@ -416,11 +416,11 @@
         </h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div class="structure-card">
-            <img src="assets/iky.jpg" alt="" />
+            <img src="assets/vector pria.jpg" alt="" />
             <h3>Martin Setya Endra W.</h3>
           </div>
       </section>
